[tool.poetry]
name = "games"
version = "0.1.0"
description = "Collection of Python games."
authors = ["onnnnn <62586909+onnnnn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
